remove getFirst() method